--- a/package.json
+++ b/package.json
@@ -9,15 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.4.3",
+    "@react-navigation/drawer": "^6.5.3",
+    "@react-navigation/material-top-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/stack": "^6.3.7",
     "expo": "~47.0.8",
+    "expo-checkbox": "~2.2.2",
+    "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.14.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-pager-view": "6.0.1",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-toast-message": "^2.1.5"
+    "react-native-screens": "^3.18.2",
+    "react-native-select-dropdown": "^3.1.0",
+    "react-native-tab-view": "^3.3.2",
+    "react-native-toast-message": "^2.1.5",
+    "react-native-webview": "^11.25.0",
+    "select-philippines-address": "^1.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
